[package]
name = "sqltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version="0.27.0"}
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls","sqlite" ] }
async-std = { version = "1", features = [ "attributes" ] }
dotenv = "0.15.0"
orm = {path="./orm"}
orm-setup = {path="./orm-setup"}
lazy_static = "1.4.0"
