[package]
name = "orm-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.95",features=["full"]}
quote = "1.0.18"
proc-macro2 = "1.0.39"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls","sqlite" ] }
async-std = { version = "1", features = [ "attributes" ] }